--- a/calculadoraSonicorp.html
+++ b/calculadoraSonicorp.html
@@ -5,41 +5,142 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sonicorp</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body style="font-family: Arial, Helvetica, sans-serif;">
     <center>
         <h1>Sonicorp - Calculadora Financeira</h1>
         <br><br>
-        <label style="font-size: 18px;">
-            Digite a quantidade média de vezes que as esteiras da sua produção sofreram paradas não planejada devido ao mau alinhamento no transporte de produtos no último mês:
+        <div>
+            <h2>Quanto você está perdendo?</h2>
+            <div>
+                <label>
+                    <span class="texto">Digite a quantidade média de vezes que as esteiras da sua produção sofreram paradas não planejada devido ao mau alinhamento no transporte de produtos no último mês:</span>
+                    <br><br>
+                    <input type="number" id="iptDesvio" placeholder="Valor de Desvios" style="width: 200px;">
+                </label>
+                <br><br><br>
+                <label style="font-size: 18px;">
+                    <span class="texto">Digite o tempo médio necessário para solucionar cada um destes problemas ocorridos no último mês:</span>
+                    <br><br>
+                    <input type="number" id="iptTempo" placeholder="Valor de Tempo" style="width: 200px;">
+                </label>
+                <br><br><br>
+                <label style="font-size: 18px;">
+                    <span class="texto">Selecione o porte de sua empresa</span>
+                    <select id="slcPorte">
+                        <option value="p">Pequeno</option>
+                        <option value="m">Médio</option>
+                        <option value="g">Grande</option>
+                    </select>
+                </label>
+                <br><br><br>
+                <button onclick="calcular()">Calcular</button>
+                <br><br>
+                <div id="divMensagem1"></div>
+            </div>
             <br><br>
-            <input type="number" id="iptDesvio" placeholder="Valor de Desvios" style="width: 200px;">
-        </label>
-        <br><br><br>
-        <label style="font-size: 18px;">
-            Digite o tempo médio necessário para solucionar cada um destes problemas ocorridos no último mês:
+            <hr>
             <br><br>
-            <input type="number" id="iptTempo" placeholder="Valor de Tempo" style="width: 200px;">
-        </label>
-        <br><br>
-        <button onclick="calcular()">Calcular</button>
-        <br><br>
-        <div id="divMensagem"></div>
+            <h2>Orçamento</h2>
+            <br>
+            <span class="texto">Informe quantos metros de esteira possui cada setor de sua produção <br> Caso não possua algum desses setores, deixe o campo vazio</span>
+            
+            <div class="boxes">
+                <div class="box setor1">
+                    <label>
+                        <span class="titulo-sensor">Seleção de Matéria Prima</span>
+                        <input type="number" id="iptSetor1">
+                    </label>
+                </div>
+                <div class=" box setor2">
+                    <label>
+                        <span class="titulo-sensor">Higienização</span>
+                        <input type="number" id="iptSetor2">
+                    </label>
+                </div>
+                <div id="box setor3">
+                    <label>
+                        <span class="titulo-sensor">Processamento</span>
+                        <input type="number" id="iptSetor3">
+                    </label>
+                </div>
+                <div id="box setor4">
+                    <label>
+                        <span class="titulo-sensor">Embalagem</span>
+                        <input type="number" id="iptSetor4">
+                    </label>
+                </div>
+                <div class="box setor5">
+                    <label>
+                        <span class="titulo-sensor">Armazenamento</span>
+                        <input type="number" id="iptSetor5">
+                    </label>
+                </div>
+                <div class="box setor6">
+                    <label>
+                        <span class="titulo-sensor">Distribuição</span>
+                        <input type="number" id="iptSetor6">
+                    </label>
+                </div>
+            </div>
+            <br><br>
+            <button onclick="calcularOrcamento()">Calcular Orçamento</button>
+            <br><br>
+            <div id="divMensagem"></div>
+        </div>
+        <div id="divMensagem2"></div>
     </center>
 </body>
 
 </html>
 <script>
+    var precoSensor = 200;
     function calcular() {
         var desvio = Number(iptDesvio.value);
         var tempo = Number(iptTempo.value);
-        var total = desvio * 10000 * tempo;
+        var porte = slcPorte.value;
+        var total = 0;
 
-        if ((desvio <= 0) || (tempo <= 0)){
-            divMensagem.innerHTML = `Por favor, digite valores válidos`;            
-        }else{
-            divMensagem.innerHTML = `O total médio gasto, em reais, que poderia ter sido evitado com o uso de nossa tecnologia foi de R$${total},00`
+        if (porte == 'p'){
+            total = desvio * 23467 * tempo;
+        }else if (porte == 'm'){
+            total = desvio * 41067 * tempo;
+        }else {
+            total = desvio * 88002 * tempo;
         }
+
+
+        if ((desvio < 0) || (tempo < 0)) {
+            divMensagem1.innerHTML = `Valor inválido`;
+
+        }else if ((desvio == 0) || (tempo == 0)){
+            divMensagem1.innerHTML = `Todos os campos devem ser preenchidos`;
+        } else {
+            divMensagem1.innerHTML = `O total médio gasto, em reais, que poderia ter sido evitado com o uso de nossa tecnologia foi de R$${total},00 <br>`
+        }
+    }
+    function calcularOrcamento() {
+        var setor1 = Number(iptSetor1.value);
+        var setor2 = Number(iptSetor2.value);
+        var setor3 = Number(iptSetor3.value);
+        var setor4 = Number(iptSetor4.value);
+        var setor5 = Number(iptSetor5.value);
+        var setor6 = Number(iptSetor6.value);
+
+        if ((setor1 < 0) || (setor2 < 0) || (setor3 < 0) || (setor4 < 0) || (setor5 < 0) || (setor6 < 0)) {
+            divMensagem2.innerHTML = 'Valor inválido';
+        } else {
+
+            var totalMetros = setor1 + setor2 + setor3 + setor4 + setor5 + setor6;
+            var totalSensores = totalMetros / 2;
+            var valorTotal = totalSensores.toFixed() * precoSensor;
+
+            divMensagem2.innerHTML = `Com um total de ${totalMetros} metros de esteira, você irá precisar de aproximadamente ${totalSensores.toFixed()} pares de sensor, que custará aproximados R$${valorTotal}`
+
+
+        }
+
     }
 </script>
